# synergy-node-control-panel

./: .env.example  .gitattributes  .gitignore  03-proof-of-synergy-consensus.docx  CHANGELOG.md  DISTRIBUTION.md  Explorer-Reset-Integration-Guide.md  IMPLEMENTATION_SUMMARY.md  PQC_INTEGRATION.md  README.md  RELEASES_README.md  RELEASE_NOTES_v2.10.0.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v4.0.0.md  SETUP.md  SETUP_WIZARD_GUIDE.md  Synergy_Protocol_Naming_Encoding_Standards.docx  Testnet-Beta-Control-Panel-Issue-Report.docx  USER_GUIDE.md  devnet-issues-report.cjs  electron-builder.yml  index.html  package-lock.json  package.json  release-notes-v2.10.0.docx  release-notes-v2.9.4.docx  release-notes-v3.0.0.docx  release-notes-v4.0.0.docx  testbeta-issues-report.cjs  testnet-issues-report.cjs  uninstall.sh  vite.config.js  ~$lease-notes-v2.9.4.docx
control-service/: Cargo.toml
control-service/binaries/: synergy-devnet-aarch64-apple-darwin
control-service/icons/: icon.icns
control-service/src/: agent.rs  app_context.rs  control_service.rs  lib.rs  monitor.rs  testbeta_agent_service.rs  testnet.rs  testnet_agent_service.rs  testnet_beta.rs
control-service/src/blockchain/: mod.rs  rpc_client.rs  service.rs
control-service/synergy-address-engine/: Cargo.toml  readme_doc_testbeta.md  testbeta_generator.rs
control-service/synergy-address-engine/src/: lib.rs  main.rs
control-service/synergy-node/: Cargo.toml
control-service/synergy-node/src/: consensus.rs  crypto.rs  main.rs  network.rs  node.rs  rpc.rs  storage.rs
control-service/testbeta-agent/: Cargo.toml
control-service/testbeta-agent/src/: main.rs
control-service/testnet-agent/: Cargo.toml
control-service/testnet-agent/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  frontend-api.json
src-tauri/devnet-agent/: Cargo.toml
src-tauri/devnet-agent/src/: main.rs
src-tauri/src/: agent.rs  app_context.rs  control_service.rs  devnet_agent_service.rs  env_config.rs  event_bus.rs  lib.rs  main.rs  monitor.rs  testnet_beta.rs
src-tauri/src/blockchain/: service.rs
src-tauri/src/node_manager/: commands.rs  genesis.rs  init.rs  installer.rs  logs.rs  mod.rs  multi_node_process.rs  network_discovery.rs  node_classes.rs  process.rs  real_node.rs  status.rs  types.rs
src-tauri/target-sidecars/: .rustc_info.json
src-tauri/target-sidecars/aarch64-apple-darwin/release/: synergy-devnet-agent  synergy-devnet-agent.d
src-tauri/target-sidecars/release/.fingerprint/adler2-6fb62b63e21fe219/: lib-adler2  lib-adler2.json
src-tauri/target-sidecars/release/.fingerprint/aho-corasick-4cb272343f5d7884/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-sidecars/release/.fingerprint/alloc-no-stdlib-aba7ffa804226781/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-sidecars/release/.fingerprint/alloc-stdlib-b59b2202d44ed961/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-sidecars/release/.fingerprint/anyhow-ce8dd90b4db7b827/: lib-anyhow  lib-anyhow.json
src-tauri/target-sidecars/release/.fingerprint/anyhow-d710918d0954668b/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-sidecars/release/.fingerprint/anyhow-ec0ce7d5bcb1ad96/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-sidecars/release/.fingerprint/async-trait-b99fc7d6a124f82f/: lib-async_trait  lib-async_trait.json
src-tauri/target-sidecars/release/.fingerprint/autocfg-8c70c097f1d695df/: lib-autocfg  lib-autocfg.json
src-tauri/target-sidecars/release/.fingerprint/base64-4e5ceb11c6aa0d0e/: lib-base64  lib-base64.json
src-tauri/target-sidecars/release/.fingerprint/base64-d66a5a298b62273e/: lib-base64  lib-base64.json
(+2646 files in other folders)
