[package]
name = "synergy-devnet-control-panel"
version = "2.6.7"
description = "Synergy Devnet Control Panel"
authors = ["Synergy Network"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
flate2 = "1.0"
tar = "0.4"
zip = "2.2"
uuid = { version = "1.10", features = ["v4", "serde"] }
toml = "0.8"
rand = "0.9.2"
once_cell = "1.19"
synergy-address-engine = { path = "synergy-address-engine", package = "synergy-address-engine" }
clap = "2.33"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
futures-util = "0.3"
serde_yaml = "0.9"
dotenvy = "0.15"
sysinfo = "0.32"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3.26"

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
strip = false

[workspace]
