[package]
name = "synergy-testbeta-agent"
version = "2.6.9"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1", "json", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[workspace]
